--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -277,6 +277,16 @@ footer {
 			}
 		}
 	}
+	#join h2 {
+		width: 100%;
+		text-align: center;
+		color: white;
+		font-family: "Bangers", sans-serif !important;
+		font-size: 2em;
+		margin-top: 3rem;
+		font-weight: normal;
+		letter-spacing: 0.025em;
+	}
 }
 
 body {
