--- a/views/index.jade
+++ b/views/index.jade
@@ -64,7 +64,7 @@ block content
                         h3 Awesome community
                         p Joining the Rebellion means meeting, learning and sharing with lots of brilliant, like-minded people.
             ul
-                h2 Opt-in
+                h2 Clubs can opt-in
                 li
                     img(src="/img/projects-group.svg")
                     .content
