--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,11 +6,12 @@ html
     head
         meta(charset='utf8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-        meta(name='description', content='Rebel Makers is a monthly club for everyone who\'s interested in programming, electronics and digital production - regardless of age or skill level.')
+        meta(name='description', content=' We are a set of peer-to-peer making clubs for everyone.')
         meta(name='author', content= "Rebel Uncut")
         link(rel="icon", type="image/x-icon", href="../img/favicon.ico")
         title #{pageTitle} - Rebel Makers
         link(rel="stylesheet", href="/fonts/akula.css")
+        link(href='https://fonts.googleapis.com/css?family=Bangers', rel='stylesheet', type='text/css')
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
         != css()
         script(src="https://use.typekit.net/qhl2wtk.js")
