Commit from Quick Push

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
                 You're free to bring a project to work on, ideas of specific skills you'd like to share or learn, or simply come along and see what you fancy working on. 
 
 
-                # Who is Rebel Makers for?
+                ## Who is Rebel Makers for?
 
                 Everyone. And we really do mean that. Rebel Makers is for people of all ages, abilities and backgrounds.
 
@@ -84,7 +84,7 @@ block content
     section#community
         .wrapper.outer
             h1 We are a community 
-            h2 It's hugely important to us that Rebel Makers is and always will be grounded in and driven by the community. We are a democracy, where every Rebel has an equal voice to decide how the Clubs will be structured and what direction we take Rebel Makers in the future. 
+            h2 It's hugely important to us that Rebel Makers is and always will be grounded in and driven by the community. We run democratically, where every Rebel has a voice to decide how the Clubs will be structured and what direction we take Rebel Makers in the future. 
 
             .links
                 .link
