--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,10 @@
 @import "neat/neat";
 @import "base/base";
 
-$purple: #543968;
-$pink: #E91E63;
+// These are the wrong way around because Kevin didn't abstract variables out enough
+
+$pink: #543968;
+$purple: #E91E63;
 
 // Base 
 
@@ -106,6 +108,9 @@ $pink: #E91E63;
 		li {
 			display: inline;
 			margin-right: 1em;
+		}
+		.toggle-menu {
+			display: none;
 		}
 	}
 
@@ -324,6 +329,10 @@ h1 {
 	}
 }
 
+#what h2 {
+    font-size: 1.5rem;
+}
+
 #copy {
 	margin-bottom: 2.5em;
 	ul {
@@ -465,7 +474,7 @@ h1 {
 	}
 }
 
-// Edge
+// Ethos
 
 a.email-us {
 	@include button($pink);
@@ -473,3 +482,6 @@ a.email-us {
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+
+
+@import "res-tablet.scss";
