--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,8 @@ html
         meta(charset='utf8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
         meta(name='description', content=' We are a set of peer-to-peer making clubs for everyone.')
-        meta(name='author', content= "Rebel Uncut")
+        meta(name='author', content= "Rebel Makers")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="icon", type="image/x-icon", href="../img/favicon.ico")
         title #{pageTitle} - Rebel Makers
         link(rel="stylesheet", href="/fonts/akula.css")
